[tool.poetry]
name = "db-cron"
version = "0.1.0"
description = "Receita Federal do Brasil - Dados Públicos CNPJ"
authors = ["Aphonso Henrique do Amaral Rafael, @aphonsoar", "Bruno Peixoto <brunolnetto@gmail.com>"]
readme = "README.md"
packages = [ { include = "db_cron", from = "src" }]


[tool.poetry.dependencies]
python = "^3.8"
alembic = "1.13.1"
beautifulsoup4 = "^4.9.3"
bs4 = "^0.0.2"
importlib-metadata = "^7.1.0"
python-json-logger = "^2.0.7"
python-dotenv = "^1.0.0"
lxml = "^5.2.2"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"
pydantic-settings = "2.2.1"
requests = "2.32.3"
ruff = "0.4.7"
SQLAlchemy = "^2.0.0"
sqlalchemy-utils = "^0.41.2"
typing-extensions = "^3.10.0.0"
tzdata = "2024.1"
wget = "^3.2"
timy = "0.4.2"
tqdm = "4.66.4"
toml = "0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
