[tool.poetry]
name = "db-cron"
version = "0.1.0"
description = "A dockerized cron job with database"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
readme = "README.md"
packages = [ { include = "db_cron", from = "backend" }]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "1.13.3"
python-json-logger = "^2.0.7"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
pytest="8.3.3"
pydantic = "^2.7.1"
pydantic-settings = "2.6.0"
requests = "2.32.3"
ruff = "0.7.1"
SQLAlchemy = "^2.0.0"
sqlalchemy-utils = "^0.41.2"
wget = "^3.2"
uv = "0.4.29"
tenacity = "9.0.0"
sqlmodel = "0.0.22"
toml = "0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
